<resources>
    <string name="app_name">TCC</string>
    <string name="please_wait">Please Wait</string>
    <string name="ok">OK</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="loremupsome">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero</string>
    <string name="msg_logout">Would you like to exit from the App?</string>
    <string name="menu_home">Home</string>
    <string name="nav_setting">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="nav_penalti">Penalties</string>
    <string name="nav_invoice">Invoices</string>
    <string name="nav_employee">Employees</string>
    <string name="employee">Employee</string>
    <string name="customer">Customers</string>
    <string name="nav_panalti">Penalties</string>
    <string name="nav_inspection">Inspections</string>
    <string name="field_operator">Field Operator</string>
    <string name="site">Site</string>
    <string name="select_date">Select Date</string>
    <string name="operation_manager">Operation Manager</string>
    <string name="quality_manager">Quality Manager</string>
    <string name="which_age_category_do_you_fall_into">Which age category do you fall into?</string>
    <string name="remark">Remark</string>
    <string name="select_site">Select Site</string>
    <string name="select_field_operator">Select Field Operator</string>
    <string name="select_operation_manager">Select Operation Manager</string>
    <string name="select_material">Select Material</string>
    <string name="select_quality_manager">Select Quality Manager</string>
    <string name="add_employee">Add Employee</string>
    <string name="submit">Submit</string>
    <string name="select_employee">Select Employee</string>
    <string name="select_reason">Select Reason</string>
    <string name="Amount">Amount</string>
    <string name="visitor">Lead</string>
    <string name="nav_visitor">Leads</string>
    <string name="state">State</string>
    <string name="select_state">Select State</string>
    <string name="select_gujrat">Gujarat</string>
    <string name="lead_type">Lead Type</string>
    <string name="hot">Hot</string>
    <string name="warm">Warm</string>
    <string name="cold">Cold</string>
    <string name="Silent">Silent</string>
    <string name="working_hours">Working Hours</string>
    <string name="perpose_date">Proposed Date</string>
    <string name="working_days">Working Days</string>
    <string name="gst">GST</string>
    <string name="residential">Residential</string>
    <string name="commercial">Commercial</string>
    <string name="industrial">Industrial</string>
    <string name="text_image">image</string>
    <string name="no_data_available">No Data Available</string>
    <string name="site_type">Site Type</string>
    <string name="proposed_date">Proposed Date</string>
    <string name="workkinng_day">Working Day</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="service">Service</string>
    <string name="name">Name</string>
    <string name="total">Total</string>
    <string name="cgst">CGST</string>
    <string name="sgst">SGST</string>
    <string name="igst">IGST</string>
    <string name="status">Status</string>
    <string name="add_user">Add Staff</string>
    <string name="remove">Remove</string>
    <string name="nav_attendance">Attendance</string>
    <string name="half_day">Half Day</string>
    <string name="absent">Absent</string>
    <string name="overtime">Overtime</string>
    <string name="late_fine">Late Fine</string>
    <string name="pead_leave">Paid Leave</string>
    <string name="fullday">Full Day</string>
    <string name="late_fine_dialog_txt">Add number of hours to be deducted from total shift hours</string>
    <string name="salary">Salary</string>
    <string name="advance">Advance</string>
    <string name="total_pending">Total Pending</string>
    <string name="date">Date</string>
    <string name="monthly_salary">Monthly Salary</string>
    <string name="present">Present</string>
    <string name="paid_holiday">Paid Holiday</string>
    <string name="adavance">Advance</string>
    <string name="site_name">Site Name</string>
    <string name="employee_name">Employee Name</string>
    <string name="employee_type">Employee Type</string>
    <string name="remarks">Remarks</string>
    <string name="inspection_date">Inspection Date</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="employee_list">Employee List</string>
    <string name="add_site">Add Site</string>
    <string name="add_quation">Add Quotation</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="other">Other</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="total_site">Total Site</string>
    <string name="expected_end_date">Expected End Date</string>
    <string name="expected_start_date">Expected Start Date</string>
    <string name="payment">Payment</string>
    <string name="document">Document</string>
    <string name="select_city">Select City</string>
    <string name="company_name">Company Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="uniform_date">Uniform Date</string>
    <string name="select_uniform_date">Select Uniform Type</string>
    <string name="room_no">Room No</string>
    <string name="room_address">Room Address</string>
    <string name="uniform">Uniform</string>
    <string name="room_allocation">Room Allocation</string>
    <string name="training">Training</string>
    <string name="no_data_found">No Data Found!</string>
    <string name="title">Title</string>
    <string name="recent_leads">Recent Leads</string>
    <string name="ticket">Tickets</string>
    <string name="priority">Priority</string>
    <string name="pending">Pending</string>
    <string name="pincode">Pincode</string>
    <string name="option_camera">Camera</string>
    <string name="option_gallery">Gallery</string>
    <string name="select_usertype">Select UserType</string>
    <string name="select_training">Select Training</string>
    <string name="company_name_indu_name">Company Name/Individual Name</string>
    <string name="address_line1">Address Line 1</string>
    <string name="address_line2">Address Line 2</string>
    <string name="gst_dummy_no">24AABCU9603R1ZT</string>
    <string name="working_hrs">Working Hrs</string>
    <string name="gst_no">GST No</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="select_company">Select Company</string>
    <string name="select_service">Select Service</string>
    <string name="accept">Accept</string>
    <string name="invoice">Invoice</string>
    <string name="team_defination">Team Defination</string>
    <string name="estimation_date">Estimation Date</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="description">Description</string>
    <string name="notes">Notes</string>
    <string name="terms">Terms</string>
    <string name="sub_total">Sub Total</string>
    <string name="pay_now">Pay Now</string>
    <string name="next">Next</string>
    <string name="inspection">Inspection</string>
    <string name="total_basic_amount">Total Amount</string>
    <string name="RS">\u20b9</string>
    <string name="remaining_basic_payment">Remaining Amount</string>
    <string name="total_gst_amount">Total GST</string>
    <string name="remaining_gst_payment">Remaining GST</string>
    <string name="payment_date">Payment Date</string>
    <string name="amount_type">Amount Type</string>
    <string name="excluding_gst_amount">Excluding GST Amount</string>
    <string name="including_gst_amount">Including GST Amount</string>
    <string name="other_gst_amount">GST Amount</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="gst_amount">GST Amount</string>
    <string name="account_no">Account No</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="cheque">Cheque</string>
    <string name="online">Online</string>
    <string name="cash">Cash</string>
    <string name="cheque_no">Cheque No</string>
    <string name="bank_name">Bank Name</string>
    <string name="branch_name">Branch Name</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="nav_payment">Payments</string>
    <string name="nav_quotations">Quotations</string>
    <string name="nav_site">Sites</string>
    <string name="rejecte">Reject</string>
    <string name="halfday_count">HalfDay Count</string>
    <string name="absent_count">Absent count</string>
    <string name="present_count">Present Count</string>
    <string name="team_definitions">Team Definitions</string>
    <string name="team_definition">Team Definition</string>
    <string name="estimation_no">Estimation No</string>
    <string name="type">Type</string>
    <string name="new_title">New</string>
    <string name="rokadi">Rokadi</string>
    <string name="shuffle">Shuffle</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="add">ADD</string>
    <string name="you_dont_have_a_rights">You Don\'t have a Rights</string>
    <string name="half_day_ot">Half Day (OT)</string>
    <string name="full_day_ot">Full Day (OT)</string>
    <string name="message">Message</string>
    <string name="reminder_date">Reminder Date</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="procces_date">Process Date</string>
    <string name="procces_time">Process Time</string>
    <string name="reminder_date_time">Reminder Date Time</string>
    <string name="process_date_time">Process Date Time</string>
    <string name="over_time">Over Time</string>
    <string name="salary_amount">Salary Amount</string>
    <string name="per_day_salary">Per Day Salary</string>
    <string name="present_day">Present Day</string>
    <string name="absent_day">Absent Day</string>
    <string name="halfday_overtime">Halfday Overtime</string>
    <string name="fullday_overtime">Fullday Overtime</string>
    <string name="pay_amount">Pay Amount</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="default_notification_channel_id">tcc_v1</string>
    <string name="upload_document">Upload Document</string>
    <string name="alert">Alert</string>
    <string name="msg_delete">Are you want to sure Delete ?</string>
    <string name="advance_amount">Advance Amount</string>
    <string name="panalty_amount">Penalty Amount</string>
    <string name="received">Received Advance(Deduct From Salary)</string>
    <string name="paid">Pay Advance(Add In Salary)</string>
</resources>