<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_visitor"
            android:icon="@drawable/ic_visitor"
            android:title="@string/nav_visitor" />

        <item
            android:id="@+id/nav_site"
            android:icon="@drawable/ic_site"
            android:title="@string/nav_site" />


        <item
            android:id="@+id/nav_quotation"
            android:icon="@drawable/ic_quotation"
            android:title="@string/nav_quotations" />

        <item
            android:id="@+id/nav_customer"
            android:icon="@drawable/ic_customer"
            android:title="@string/customer" />

        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_attendance"
            android:title="@string/nav_attendance" />


        <item
            android:id="@+id/nav_invoice"
            android:icon="@drawable/ic_invoice"
            android:title="@string/nav_invoice" />


        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_payment"
            android:title="@string/nav_payment" />

        <item
            android:id="@+id/nav_employee"
            android:icon="@drawable/ic_employee"
            android:title="@string/nav_employee" />


        <item
            android:id="@+id/nav_inspection"
            android:icon="@drawable/ic_inspection"
            android:title="@string/nav_inspection" />

        <item
            android:id="@+id/nav_penalti"
            android:icon="@drawable/ic_penaltys"
            android:visible="false"
            android:title="@string/nav_panalti" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user_profile"
            android:title="@string/menu_profile"
            android:visible="false" />

        <item
            android:id="@+id/nav_ticket"
            android:icon="@drawable/ic_ticket"
            android:visible="false"
            android:title="@string/ticket" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_setting" />
    </group>
</menu>