<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.tcc.app.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_visitor"
        android:name="com.tcc.app.fragment.LeadFragment"
        android:label="@string/nav_visitor"
        tools:layout="@layout/reclerview_swipelayout" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.tcc.app.fragment.ProfileMainFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_employee"
        android:name="com.tcc.app.fragment.EmployeeFragment"
        android:label="@string/nav_employee"
        tools:layout="@layout/reclerview_swipelayout" />

    <fragment
        android:id="@+id/nav_invoice"
        android:name="com.tcc.app.fragment.InvoiceFragment"
        android:label="@string/nav_invoice"
        tools:layout="@layout/fragment_invoice" />

    <fragment
        android:id="@+id/nav_customer"
        android:name="com.tcc.app.fragment.CustomerFragment"
        android:label="@string/customer"
        tools:layout="@layout/fragment_customer" />

    <fragment
        android:id="@+id/nav_quotation"
        android:name="com.tcc.app.fragment.QuotationFragment"
        android:label="@string/nav_quotations"
        tools:layout="@layout/reclerview_swipelayout" />

    <fragment
        android:id="@+id/nav_penalti"
        android:name="com.tcc.app.fragment.PenaltyFragment"
        android:label="@string/nav_penalti"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_inspection"
        android:name="com.tcc.app.fragment.InspectionFragment"
        android:label="@string/nav_inspection"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/nav_attendance"
        android:name="com.tcc.app.fragment.AttendanceListFragment"
        android:label="@string/nav_attendance"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/nav_payment"
        android:name="com.tcc.app.fragment.PaymentListFragment"
        android:label="@string/nav_payment"
        tools:layout="@layout/reclerview_swipelayout" />
    <fragment
        android:id="@+id/nav_ticket"
        android:name="com.tcc.app.fragment.TicketListFragment"
        android:label="@string/ticket"
        tools:layout="@layout/fragment_ticket" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.tcc.app.fragment.SettingsFragment"
        android:label="@string/nav_invoice"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/nav_site"
        android:name="com.tcc.app.fragment.CustomerSiteFragment"
        android:label="@string/nav_site"
        tools:layout="@layout/fragment_customer_site" />

</navigation>