<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddSiteActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_with_back_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inCompanyName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/company_name"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/edtCompanyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="textCapWords"
                    android:maxLength="50"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inCompanyName">

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:digits="qwertyuiopasdfghjklzxcvbnm QWERTYUIOPASDFGHJKLZXCVBNM"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="textCapWords"
                    android:maxLength="50"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inStartdaate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/expected_start_date"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inName">

                <EditText
                    android:id="@+id/edtSdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:editable="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="none"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inendDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/expected_end_date"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inStartdaate">

                <EditText
                    android:id="@+id/edtEdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:editable="true"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="none"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inpDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/perpose_date"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inendDate">

                <EditText
                    android:id="@+id/edtPdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:editable="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="none"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inWorkingd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/working_days"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inpDate">

                <EditText
                    android:id="@+id/edtWorkingDays"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inWorkingh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/working_hours"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inWorkingd">

                <EditText
                    android:id="@+id/edtWorkingHour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inWorkingh">

                <EditText
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="textPostalAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ingst"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:hint="@string/gst"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inAddress">

                <EditText
                    android:id="@+id/edtGST"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:fontFamily="@font/montserrat_regular"
                    android:inputType="textCapCharacters"
                    android:maxLength="15"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.tcc.app.customview.TextviewBold
                android:id="@+id/txtSitetype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingTop="@dimen/_2sdp"
                android:text="@string/site_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingst" />

            <RadioGroup
                android:id="@+id/rg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtSitetype">

                <com.tcc.app.customview.RadioButtonReguler
                    android:id="@+id/rbResidential"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:text="@string/residential" />

                <com.tcc.app.customview.RadioButtonReguler
                    android:id="@+id/rbCommercial"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:text="@string/commercial" />

                <com.tcc.app.customview.RadioButtonReguler
                    android:id="@+id/rbIndustrial"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:text="@string/industrial" />

            </RadioGroup>

            <com.tcc.app.customview.ButtonReguler
                android:id="@+id/btnSubmit"
                style="@style/CustomPressButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_18sdp"
                android:text="@string/submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnAddQuatation"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rg" />

            <com.tcc.app.customview.ButtonReguler
                android:id="@+id/btnAddQuatation"
                style="@style/CustomPressButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_18sdp"
                android:text="@string/add_quation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnSubmit"
                app:layout_constraintTop_toBottomOf="@+id/rg" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>